ADCM-3039 Denied checks returned to audit tests

--- a/tests/functional/audit/scenarios/create_adcm_entities.yaml
+++ b/tests/functional/audit/scenarios/create_adcm_entities.yaml
@@ -14,8 +14,6 @@ settings:
   process-type: sequence
   start-from-first: matched
 
-# restore denied within ADCM-3039
-
 operations:
   # cluster
   - create:
@@ -26,10 +24,11 @@ operations:
       what:
         type: cluster
     result: fail
-#  - create:
-#      what:
-#        type: cluster
-#    result: denied
+  - create:
+      what:
+        type: cluster
+    result: denied
+    username: {{ username }}
   # provider
   - create:
       what:
@@ -39,10 +38,11 @@ operations:
       what:
         type: provider
     result: fail
-#  - create:
-#      what:
-#        type: provider
-#    result: denied
+  - create:
+      what:
+        type: provider
+    result: denied
+    username: {{ username }}
   # host
   - create: &hfp
       what:
@@ -56,10 +56,12 @@ operations:
     result: fail
   - create: *hfr
     result: fail
-#  - create: *hfp
-#    result: denied
-#  - create: *hfr
-#    result: denied
+  - create: *hfp
+    result: denied
+    username: {{ username }}
+  - create: *hfr
+    result: denied
+    username: {{ username }}
   # group configs
   - create: &clus-conf-gr
       what:
@@ -70,8 +72,9 @@ operations:
         name: cluster-group
   - create: *clus-conf-gr
     result: fail
-#  - create: *clus-conf-gr
-#    result: denied
+  - create: *clus-conf-gr
+    result: denied
+    username: {{ username }}
   - create: &serv-conf-gr
       what:
         type: service
@@ -81,8 +84,9 @@ operations:
         name: service-group
   - create: *serv-conf-gr
     result: fail
-#  - create: *serv-conf-gr
-#    result: denied
+  - create: *serv-conf-gr
+    result: denied
+    username: {{ username }}
   - create: &comp-conf-gr
       what:
         type: component
@@ -92,5 +96,6 @@ operations:
         name: component-group
   - create: *comp-conf-gr
     result: fail
-#  - create: *comp-conf-gr
-#    result: denied
+  - create: *comp-conf-gr
+    result: denied
+    username: {{ username }}
