--- a/tests/functional/audit/scenarios/create_rbac_entities.yaml
+++ b/tests/functional/audit/scenarios/create_rbac_entities.yaml
@@ -14,8 +14,6 @@ settings:
   process-type: exact
   start-from-first: matched
 
-# restore denied within ADCM-3039
-
 operations:
   - create:
       what:
@@ -25,10 +23,11 @@ operations:
       what:
         type: 'user'
     result: fail
-#  - create:
-#      what:
-#        type: 'user'
-#    result: denied
+  - create:
+      what:
+        type: 'user'
+    result: denied
+    username: {{ user.username }}
   - create:
       what:
         type: 'group'
@@ -37,10 +36,11 @@ operations:
       what:
         type: 'group'
     result: fail
-#  - create:
-#      what:
-#        type: 'group'
-#    result: denied
+  - create:
+      what:
+        type: 'group'
+    result: denied
+    username: {{ user.username }}
   - create:
       what:
         type: 'role'
@@ -49,10 +49,11 @@ operations:
       what:
         type: 'role'
     result: fail
-#  - create:
-#      what:
-#        type: 'role'
-#    result: denied
+  - create:
+      what:
+        type: 'role'
+    result: denied
+    username: {{ user.username }}
   - create:
       what:
         type: 'policy'
@@ -61,7 +62,8 @@ operations:
       what:
         type: 'policy'
     result: fail
-#  - create:
-#      what:
-#        type: 'policy'
-#    result: denied
+  - create:
+      what:
+        type: 'policy'
+    result: denied
+    username: {{ user.username }}
