ADCM-3106 Integration isort

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ exclude = '''
 )
 '''
 
+[tool.isort]
+profile = "black"
+
 [tool.pylint.main]
 # Analyse import fallback blocks. This can be used to support both Python 2 and 3
 # compatible code, which means that the block might have code that exists only in
