--- a/tests/functional/audit/scenarios/create_rbac_entities.yaml
+++ b/tests/functional/audit/scenarios/create_rbac_entities.yaml
@@ -31,7 +31,7 @@ operations:
   - create:
       what:
         type: 'group'
-        name: {{ group.name }}
+        name: "{{ group.name }} [local]"
   - create:
       what:
         type: 'group'
