--- a/tests/functional/audit/scenarios/update_rbac.yaml
+++ b/tests/functional/audit/scenarios/update_rbac.yaml
@@ -28,7 +28,7 @@ operations:
   - update: &update-group
       what:
         type: group
-        name: {{ group.name }}
+        name: "{{ group.name }} [local]"
       how: update-rbac-object
   - update: *update-group
     result: fail
