ADCM-3093 Tests updated

--- a/tests/functional/audit/scenarios/full_update_rbac.yaml
+++ b/tests/functional/audit/scenarios/full_update_rbac.yaml
@@ -44,11 +44,11 @@ operations:
       how:  update-rbac-object
       changes:
         previous:
-          name: "groupforU [local]"
+          name: "groupforU"
           description: ""
-          user: []
+          user: ["newuser"]  # this user is added in previous step
         current:
-          name: "ChangedGroupName [local]"
+          name: "ChangedGroupName"
           description: "Whole new description"
           user: ["admin"]
   - update:
@@ -81,7 +81,7 @@ operations:
         current:
           name: "NewPolicyName"
           description: "Whole new description"
-          role: "View provider configurations"
+          role: "New Custom Role"
           user: ["newuser"]
           group: ["ChangedGroupName [local]"]
           object:
