ADCM-3029 Tests on audit of host action

--- a/tests/functional/audit/bundles/actions/cluster/config.yaml
+++ b/tests/functional/audit/bundles/actions/cluster/config.yaml
@@ -71,7 +71,12 @@
         param:
           type:
             integer
-
+    host_action:
+      <<: *action
+      host_action: true
+      display_name: Host action
+      params:
+        ansible_tags: wait, success
 
 - type: service
   name: actions_service
